--- a/style.css
+++ b/style.css
@@ -26,9 +26,9 @@ body {
   height: 60px;
   display: inline-flex;
   position: relative;
-  background-color: rgba(254, 244, 243, 0.3);
-  color: rgb(240, 229, 229);
-
+  background-color: rgba(254, 244, 243, 0.2);
+  /* color: rgb(240, 229, 229); */
+  color: white;
   z-index: 2;
 }
 
@@ -215,8 +215,9 @@ td {
   margin-bottom: 1%;
   width: 80%;
   height: auto;
-  background-color: rgba(254, 244, 243, 0.3);
-  color: rgb(240, 229, 229);
+  background-color: rgba(254, 244, 243, 0.2);
+  /* color: rgb(240, 229, 229); */
+  color: white;
   z-index: 2;
   text-align: center;
 }
@@ -234,7 +235,7 @@ td {
   .header {
     width: 100%;
     height: 70px;
-    background-color: rgba(254, 244, 243, 0.3);
+    background-color: rgba(254, 244, 243, 0.2);
   }
 
   .title {
@@ -408,7 +409,7 @@ td {
   .header {
     width: 100%;
     height: 70px;
-    background-color: rgba(254, 244, 243, 0.3);
+    background-color: rgba(254, 244, 243, 0.2);
   }
 
   .title {
@@ -578,7 +579,7 @@ td {
   .header {
     width: 100%;
     height: 70px;
-    background-color: rgba(254, 244, 243, 0.3);
+    background-color: rgba(254, 244, 243, 0.2);
   }
 
   .title {
@@ -752,7 +753,7 @@ td {
   .header {
     width: 100%;
     height: 80px;
-    background-color: rgba(254, 244, 243, 0.3);
+    background-color: rgba(254, 244, 243, 0.2);
   }
 
   .title {
@@ -935,8 +936,9 @@ td {
     height: 60px;
     display: inline-flex;
     position: relative;
-    background-color: rgba(254, 244, 243, 0.3);
-    color: rgb(240, 229, 229);
+    background-color: rgba(254, 244, 243, 0.2);
+    /* color: rgb(240, 229, 229); */
+    color: white;
 
     z-index: 2;
   }
@@ -1133,8 +1135,10 @@ td {
     margin-bottom: 1%;
     width: 80%;
     height: auto;
-    background-color: rgba(254, 244, 243, 0.3);
-    color: rgb(240, 229, 229);
+    background-color: rgba(254, 244, 243, 0.2);
+    /* color: rgb(240, 229, 229); */
+    color: white;
+
     z-index: 2;
     text-align: center;
   }
