open sans is back again because that did not worked

--- a/style.css
+++ b/style.css
@@ -9,11 +9,11 @@ body {
   background: url("img.jpg");
   background-repeat: no-repeat;
   background-size: cover;
-  font-family: "Roboto Font", cursive;
+  font-family: "OpenSans";
 }
 
 @font-face {
-  font-family: "Roboto Font";
+  font-family: "OpenSans";
   src: url("./Open_Sans/OpenSans-Regular.ttf");
 }
 
