--- a/style.css
+++ b/style.css
@@ -251,12 +251,12 @@ td {
 
   .header {
     width: 100%;
-    height: 70px;
+    height: 110px;
     background-color: rgba(0, 0, 0, 0.1);
   }
 
   .title {
-    width: 26%;
+    width: 30%;
     height: 100%;
     margin-top: 0;
     padding-top: 6%;
@@ -267,6 +267,10 @@ td {
     font-size: 0.8rem;
   }
 
+  #gujaratBtn {
+    margin-top: 10% !important;
+  }
+
   .navigation {
     width: 65%;
     height: 100%;
@@ -274,7 +278,7 @@ td {
   }
   .menu {
     margin-right: 0;
-    margin-top: 4%;
+    margin-top: 12%;
     list-style-type: none;
   }
   .navigation-li {
@@ -448,7 +452,7 @@ td {
   /* smartphones, Android phones, landscape iPhone */
   .header {
     width: 100%;
-    height: 70px;
+    height: 110px;
     background-color: rgba(0, 0, 0, 0.1);
   }
 
@@ -460,6 +464,9 @@ td {
   .title h4 {
     font-size: 1rem;
   }
+  #gujaratBtn {
+    margin-top: 10% !important;
+  }
   .navigation {
     width: 67%;
     height: 100%;
@@ -467,7 +474,7 @@ td {
   }
   .menu {
     margin-right: 4%;
-    margin-top: 4%;
+    margin-top: 12%;
     list-style-type: none;
   }
   .navigation-li {
@@ -618,7 +625,7 @@ td {
 
   .header {
     width: 100%;
-    height: 70px;
+    height: 130px;
     background-color: rgba(0, 0, 0, 0.1);
   }
 
@@ -630,6 +637,9 @@ td {
   .title h4 {
     font-size: 1.1rem;
   }
+  #gujaratBtn {
+    margin-top: 8% !important;
+  }
   .navigation {
     width: 67%;
     height: 100%;
@@ -637,7 +647,7 @@ td {
   }
   .menu {
     margin-right: 5%;
-    margin-top: 3%;
+    margin-top: 10%;
     list-style-type: none;
   }
   .navigation-li {
