gujarat state table width updated

--- a/style.css
+++ b/style.css
@@ -123,6 +123,10 @@ body {
   width: 240px;
   text-align: center;
 }
+.GujDist {
+  width: 350px;
+  text-align: center;
+}
 .stateCases {
   width: 100px;
   text-align: center;
