--- a/style.css
+++ b/style.css
@@ -23,7 +23,7 @@ body {
 
 .header {
   width: 100%;
-  height: 60px;
+  height: 70px;
   display: inline-flex;
   position: relative;
   background-color: rgba(254, 244, 243, 0.1);
@@ -43,11 +43,31 @@ body {
 .navigation {
   width: 60%;
   height: 70px;
+  /*border: 1px solid black;*/
 }
+
+.createdBy {
+  margin-top: 0.4%;
+  text-align: center;
+}
+
+.nameContainer {
+  text-align: center;
+  /*border: 1px solid red;*/
+  height: auto;
+  width: 100%;
+  display: inline-flex;
+  padding: 0 !important;
+  margin-top: -2%;
+  }
+
 .menu {
-  margin-right: 15%;
-  margin-top: 2%;
-  float: right;
+  margin-right: auto;
+  margin-left: auto;
+  /*margin-top: 2%;*/
+  float: left;
+  width: 30%;
+  /*border: 1px solid black;*/
   list-style-type: none;
 }
 
@@ -59,7 +79,7 @@ body {
 .nav-a {
   color: inherit;
   text-decoration: none;
-  font-size: 1.2rem;
+  font-size: 1.1rem;
   font-weight: 200;
   line-height: 16px;
   outline: 0;
@@ -85,6 +105,72 @@ body {
 .brTag {
   display: none;
 }
+
+/*Sliding Styles Starts*/
+
+.sliding {
+  margin-top: 2%;
+  padding-top: 8px;
+  padding-bottom: 0px;
+  height: 60px;
+  display: flex;
+  /*max-width: 1000px;*/
+  background-color: rgba(254, 244, 243, 0.1);
+  z-index: 10;
+  /*overflow-x: visible;*/
+  position: relative;
+  /*padding-left: 5px;*/
+}
+
+.buttonWrapper {
+  /*border: 1px solid black;*/
+  margin-left: auto;
+  margin-right: auto;
+  margin-bottom: 0px;
+  padding-bottom: 0px;
+}
+
+.sliderButtons {
+  display: inline-flex !important;
+  font-size: 15px;
+  width: auto;
+  margin-bottom: 0;
+  margin-left: 25px;
+}
+
+.spanCount {
+  margin-left: 5px;
+  margin-top: 3px;
+}
+
+.leftBtn{
+  position: absolute;
+  top: 0px;
+  height: inherit;
+  margin-right: 5px;
+}
+
+.rightBtn{
+  position: absolute;
+  top: 0px;
+  right: 0;
+  height: inherit; 
+}
+
+.sBtn {
+  border-radius: 7px;
+  border: none;
+  height: inherit;
+  background-color:  rgba(254, 244, 243, 0.5);
+  text-align: center;
+  width: auto;
+}
+
+.sIcon {
+  font-size: 25px;
+}
+
+/*Sliding Styles Starts*/
 
 .row {
   width: 80%;
@@ -262,41 +348,65 @@ td {
 
   .header {
     width: 100%;
-    height: 110px;
+    height: 150px;
     background-color: rgba(0, 0, 0, 0.1);
+    display: block;
+    /*border: 1px solid black;*/
   }
 
   .title {
-    width: 30%;
+    width: 90%;
     height: 100%;
     margin-top: 0;
     padding-top: 6%;
-    margin-left: 4%;
+    margin-left: auto;
+    margin-right: auto;
   }
 
   .title h4 {
     font-size: 0.8rem;
   }
 
-  #gujaratBtn {
+  /*#gujaratBtn {
     margin-top: 12% !important;
     width: 110% !important;
-  }
+  }*/
 
   #indiaBtn {
-    width: 110%;
+    width: 100%;
+    font-size: 1rem;
+    letter-spacing: 0.05rem;
   }
 
   .navigation {
-    width: 65%;
+    width: 100%;
     height: 100%;
     margin-right: 4%;
+    margin-top: -23%;
+    /*border: 1px solid black;*/
   }
+
+  .createdBy{
+    text-align: center;
+  }
+
+  .nameContainer {
+    display: inline-flex;
+    width: 100%;
+  }
+
   .menu {
-    margin-right: 0;
-    margin-top: 12%;
+    /*margin-right: 0;*/
+    margin-top: -5%;
     list-style-type: none;
+    text-align: center;
+    /*border: 1px solid black;*/
+    padding: 0px !important;
+    /*width: 50%;*/
+    margin-left: auto;
+    margin-right: auto;
   }
+  
   .navigation-li {
     padding: 0px;
   }
@@ -309,9 +419,14 @@ td {
   .brTag {
     display: block;
   }
+
+  .linkContainer {
+    margin-left: 15%;
+  }
+
   .idLink {
-    margin-top: 2%;
-    margin-left: 20%;
+    margin-top: -4%;
+    margin-right: 16%;
   }
   .insta {
     color: #b7358a;
@@ -324,6 +439,11 @@ td {
   .git {
     color: #000;
   }
+
+  /*.sliderButtons {
+    width: auto;
+  }*/
+
   .row {
     margin-top: 5%;
     text-transform: capitalize;
