--- a/style.css
+++ b/style.css
@@ -141,7 +141,7 @@ body {
   margin-bottom: 0;
   margin-left: 25px;
   transition: all 2s ease-in-out;
-  margin-left: 0;
+  /*margin-left: 0;*/
   margin-top: 4px;
 }
 
